syntax = "proto3";

package helloworld;

// Service Definition
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc HelloEveryone(stream HelloRequest) returns (HelloReply) {}
}

// Message Definition
message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}